[package]
name = "printrn"
version = "0.1.3"
edition = "2021"
authors = ["Alexandria P."]
license = "LGPL-3.0-or-later"
description = "A macro to replace `println!()`, that will replace all `\\n` with `\\r\\n`, e.g. for crossterm or other raw terminal work."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]